[bugfix] content overflow, footer height, font weight, optimized png

--- a/style/divs.css
+++ b/style/divs.css
@@ -8,6 +8,6 @@
 	    #name { color: #69C; font: 64px Raleway; }
 	    #addr { color: rgba(32,32,32,0.25); font: 20px "Courier New"; }
 	  #navMain { display: table-cell; position: relative; vertical-align: bottom; padding-right: 15px; }
-	#content { width: 100%; height: 55%; position: relative; overflow: auto; }
+	#content { width: 100%; height: 55%; position: relative; overflow: hidden; }
 	  #infoContainer { width: 100%; }
-	#footer { width: inherit; height: 15%px; display: table; }
+	#footer { width: inherit; height: 15%; display: table; }
